--- a/example/index.html
+++ b/example/index.html
@@ -9,7 +9,7 @@
         <script src="node_modules/reflect-metadata/Reflect.js"></script>
         <script src="node_modules/systemjs/dist/system.src.js"></script>
 
-        <script src="systemjs.config.js"></script>
+        <script src="system.config.js"></script>
         <script>System.import('app').catch(function(err){ console.error(err) });</script>
     </head>
 <!-- 3. Display the application -->
