fix: index paths

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <title>Ng2 Simple Components</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- inject:css -->
-        <link rel="stylesheet" href="/build/css/main.css">
+        <link rel="stylesheet" href="ng2-simple-components/build/css/main.css">
         <!-- endinject -->
     </head>
     <body>
         <sc-app></sc-app>
 
         <!-- inject:js -->
-        <script src="/build/main.js" defer async></script>
+        <script src="ng2-simple-components/build/main.js" defer async></script>
         <!-- endinject -->
     </body>
 </html>
