fix: Added path root

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <script src="ng2-simple-components/node_modules/reflect-metadata/Reflect.js"></script>
         <script src="ng2-simple-components/node_modules/systemjs/dist/system.src.js"></script>
         <script src="ng2-simple-components/node_modules/prismjs/prism.js"></script>
-        <script src="ng2-simple-components/system.configng2-simple-components/.js"></script>
+        <script src="ng2-simple-components/system.config.js"></script>
         <script src="ng2-simple-components/system.js"></script>
         <!-- endinject -->
     </body>
