--- a/index.html
+++ b/index.html
@@ -5,21 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <!-- inject:css -->
-        <link rel="stylesheet" href="ng2-simple-components/assets/css/main.css">
-        <link rel="stylesheet" href="ng2-simple-components/node_modules/prismjs/themes/prism.css">
+        <link rel="stylesheet" href="ng2-simple-components/build/css/main.css">
         <!-- endinject -->
     </head>
     <body>
         <sc-app></sc-app>
 
         <!-- inject:js -->
-        <script src="ng2-simple-components/node_modules/core-js/client/shim.min.js"></script>
-        <script src="ng2-simple-components/node_modules/zone.js/dist/zone.js"></script>
-        <script src="ng2-simple-components/node_modules/reflect-metadata/Reflect.js"></script>
-        <script src="ng2-simple-components/node_modules/systemjs/dist/system.src.js"></script>
-        <script src="ng2-simple-components/node_modules/prismjs/prism.js"></script>
-        <script src="ng2-simple-components/system.config.js"></script>
-        <script src="ng2-simple-components/system.js"></script>
+        <script src="ng2-simple-components/build/main.js" defer async></script>
         <!-- endinject -->
     </body>
 </html>
