--- a/example/index.html
+++ b/example/index.html
@@ -8,6 +8,7 @@
         <script src="node_modules/zone.js/dist/zone.js"></script>
         <script src="node_modules/reflect-metadata/Reflect.js"></script>
         <script src="node_modules/systemjs/dist/system.src.js"></script>
+        <script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
 
         <script src="system.config.js"></script>
         <script>System.import('app').catch(function(err){ console.error(err) });</script>
